syntax = "proto3";
option java_multiple_files = true;
package org.gersty.grpc.fileupload;

message FileRequest {
    string name = 1;
    bytes data = 2;
}

message FileResponse {
    string status = 1;
}

service FileUploadService {
    rpc uploadFile(FileRequest) returns (FileResponse);
    rpc streamFile(stream FileRequest) returns (FileResponse);
}